# rust_unicode_reader

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO  aliases.js  deploy.sh  search-index.js  settings.html  source-files.js
examples/: stdin_count.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/std/error/: trait.Error.js
src/: codepoints.rs  graphemes.rs  lib.rs
src/unicode_reader/: codepoints.rs.html  graphemes.rs.html  lib.rs.html
src/unicode_reader/src/: codepoints.rs.html  graphemes.rs.html  lib.rs.html
src/unicode_segmentation/: grapheme.rs.html  lib.rs.html  sentence.rs.html  tables.rs.html  word.rs.html
unicode_reader/: BadUtf8Error.t.html  CodePoints.t.html  all.html  index.html  sidebar-items.js  struct.BadUtf8Error.html  struct.CodePoints.html  struct.Graphemes.html
unicode_reader/codepoints/: struct.BadUtf8Error.html  struct.CodePoints.html
unicode_reader/graphemes/: struct.Graphemes.html
unicode_segmentation/: constant.UNICODE_VERSION.html  enum.GraphemeIncomplete.html  index.html  struct.GraphemeCursor.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.USentenceBoundIndices.html  struct.USentenceBounds.html  struct.UWordBoundIndices.html  struct.UWordBounds.html  struct.UnicodeSentences.html  struct.UnicodeWords.html  trait.UnicodeSegmentation.html
(+3 files in other folders)
