[package]
name = "unicode_reader"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
repository = "https://github.com/wfraser/rust_unicode_reader"
documentation = "https://wfraser.github.io/rust_unicode_reader/unicode_reader/"
description = "Adaptors which wrap byte-oriented readers and yield the UTF-8 data as Unicode code points or grapheme clusters."
keywords = ["unicode", "grapheme", "codepoint", "text", "reader"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
unicode-segmentation = "0.1"
