[package]
name = "unicode_reader"
version = "1.0.2"
authors = ["William R. Fraser <wfraser@codewise.org>"]
repository = "https://github.com/wfraser/rust_unicode_reader"
documentation = "https://docs.rs/unicode_reader/"
description = "Adaptors which wrap byte-oriented readers and yield the UTF-8 data as Unicode code points or grapheme clusters."
keywords = ["unicode", "grapheme", "codepoint", "text", "reader"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
smallvec = "1.4"
unicode-segmentation = "1"
